--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.30.10",
     "react-dom": "^15.5.4",
     "react-router": "^2.8.1"
   },
