--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap-loader": "^2.0.0",
     "bootstrap-sass": "^3.3.7",
+    "bootstrap-select": "^1.12.2",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.10",
